# nls-finetune-scix

./: .env.example  .gitignore  .last-branch  .mcp.json  .mise.toml  AGENTS.md  CHANGES_SUMMARY.txt  DEVELOPMENT.md  HANDOFF_US011_RESUME.md  PRD-scix-finetune-query.md  PROMPT.md  RALPH_DOCS_INDEX.md  RALPH_INDEX.md  RALPH_INTEGRATION_GUIDE.md  RALPH_SETUP.md  READINESS_CHECKLIST.md  README.md  YOUR_QUESTIONS_ANSWERED.md  activity.md  features.json  package.json  prd.json  progress.txt  pyproject.toml  ralph.sh
.beads/: issues.jsonl
.reports/: dead-code-analysis.md
data/: README.md
docker/: Dockerfile  README.md  docker-compose.yml  requirements.txt  run_local.sh  server.py  test_server.py
docs/: HYBRID_PIPELINE.md  HYBRID_PIPELINE_LAUNCH.md  LATENCY_BENCHMARKS.md  annotation-guide.md  current-state.md  dotcom-search-query-data-sources.md  e2e-test-notes.md  fine-tuning-cli.md
notebooks/: train_enrichment_model.ipynb
reports/: enrichment_baseline.json  enrichment_final_eval.json  enrichment_final_eval.md  enrichment_model_eval.json  enrichment_model_eval.md  enrichment_real_world_eval.json  enrichment_real_world_eval.md
scripts/: annotate_ads_abstracts.py  annotation_dashboard_template.html  apply_strict_fixes.py  audit_operators.py  audit_training_coverage.py  benchmark_pipeline.py  build_dataset.py  clean_ads_abstracts.py  compare_coverage.py  create_benchmark.py  curate_generated_examples.py  curate_sweet_vocabulary.py  curator_review.py  enrichment_baseline.py  evaluate_benchmark.py  evaluate_curriculum_model.py  evaluate_enrichment_model.py  init.sh  (+37 more)
(+114 files in other folders)
